using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace grpc_client.Models
{
    public class RecetaFavClass
    {
        
        public int idrecetaFavoritas { get; set; }
        public string recetasFavoritascol { get; set; }
        public int usuario_idusuario { get; set; }
    }
}




